# FastAPI-00

./: .coverage  README.md  pyproject.toml
fastapi-zero/: app.py
tests/: test_app.py
